force-app/main/default/objects/fmg_mrp__c/fmg_mrp__c.object-meta.xml
<CustomObject>
    <label>FMG MRP</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FMG MRPs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>