force-app/main/default/objects/fmg_mrp__c/fields/flow_executed__c.field-meta.xml
<CustomField>
    <fullName>flow_executed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flow Executed</label>
    <type>Checkbox</type>
</CustomField>