force-app/main/default/objects/fmg_mrp__c/fields/formula_mrp_completed__c.field-meta.xml
<CustomField>
    <fullName>formula_mrp_completed__c</fullName>
    <formula>output_mrp__r.rstk__mrplaunch_completed__c</formula>
    <label>MRP Completed</label>
    <type>Checkbox</type>
</CustomField>