force-app/main/default/objects/fmg_mrp__c/fields/formula_mrp_error__c.field-meta.xml
<CustomField>
    <fullName>formula_mrp_error__c</fullName>
    <formula>output_mrp__r.rstk__mrplaunch_error__c</formula>
    <label>MRP Error</label>
    <type>Checkbox</type>
</CustomField>