force-app/main/default/objects/fmg_mrp__c/fields/formula_mrp_status__c.field-meta.xml
<CustomField>
    <fullName>formula_mrp_status__c</fullName>
    <formula>output_mrp__r.rstk__mrplaunch_status__c</formula>
    <label>MRP Status</label>
    <type>Text</type>
</CustomField>