force-app/main/default/objects/fmg_mrp__c/fields/output_mrp__c.field-meta.xml
<CustomField>
    <fullName>output_mrp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MRP</label>
    <referenceTo>rstk__mrplaunch__c</referenceTo>
    <relationshipLabel>FMG MRPs</relationshipLabel>
    <relationshipName>FMG_MRPs</relationshipName>
    <type>Lookup</type>
</CustomField>