force-app/main/default/objects/fmg_mrp__c/fields/output_mrp_creation_status__c.field-meta.xml
<CustomField>
    <fullName>output_mrp_creation_status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MRP Creation Status</label>
    <type>Checkbox</type>
</CustomField>