force-app/main/default/objects/fmg_mrp__c/fields/output_mrp_launch_creation_message__c.field-meta.xml
<CustomField>
    <fullName>output_mrp_launch_creation_message__c</fullName>
    <label>MRP Lunch Creation Message</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>