force-app/main/default/objects/fmg_mrp__c/fields/output_request_status__c.field-meta.xml
<CustomField>
    <fullName>output_request_status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Status</label>
    <type>Checkbox</type>
</CustomField>