force-app/main/default/objects/fmg_mrp__c/fields/Plan_Option__c.field-meta.xml
<CustomField>
    <fullName>Plan_Option__c</fullName>
    <label>Plan Option</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Items</fullName>
                <default>true</default>
                <label>All Items</label>
            </value>
            <value>
                <fullName>Only Reorder Point Items</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>